Update to sites
Update to profile august 2025

--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
     <div class="image-container">
       <div class="image-box">
         <img src="images/fiver 1.png" alt="Project 1" />
-        <a href="https://github.com/LokiCodin98/LokisSurveyFormFCC">Project 1</a>
+        <a href="https://github.com/LokiCodin98/LokisSurveyFormFCC" target="blank">Project 1</a>
       </div>
       <div class="image-box">
         <img src="images/fiver 2.png" alt="Active Website" />
-        <a href="https://lokicodin98.github.io/Hellion096/">Active Website</a>
+        <a href="https://github.com/LokiCodin98/Hellion096" target="blank">Project 2</a>
       </div>
       <div class="image-box">
         <img src="images/fiver 3.png" alt="Project 2" />
-        <a href="https://github.com/LokiCodin98/LokiProductLandFCC">Project 2</a>
+        <a href="https://mobilefabricrepair.com" target="blank">Active Website</a>
       </div>
     </div>
   </section>
