--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <a href="https://github.com/LokiCodin98/Hellion096" target="blank">Project 2</a>
       </div>
       <div class="image-box">
-        <img src="images/fiver 3.png" alt="Project 2" />
+        <img src="images/mobilefabric.png" alt="Project 2" />
         <a href="https://mobilefabricrepair.com" target="blank">Active Website</a>
       </div>
     </div>
