--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     
 </head>
 <body>
+  <nav id="navbar">
+      <a id="contact-button" href="mailto:lokicoding98@proton.me">Contact</a>
+      <a id="github-button" href="https://github.com/LokiCodin98" target="_blank" rel="noopener noreferrer">GitHub</a>
+      <a id="blog-button" href="blog.html" target="blank">Blog</a>
+  </nav>
    <section id="about">
   <h2>About Me</h2>
   <img src="images/1000000023.jpg" alt="Loki/Hunter" />
@@ -22,10 +27,9 @@
   
   <p>I attended high school in Washington State but now live on the East Coast in Louisville, KY. Life here is quieter, so I spend most of my time coding and gaming a bit before calling it a day. Friends call me casual, but I stay dedicated to learning and growing.</p>
   
-  <p>I’m just starting to freelance and offer affordable web development services. My goal is to make people happy and show what I can do.</p>
+  <p>I am just starting to freelance and offer affordable web development services. My goal is to make people happy and show what I can do.</p>
 </section>
-  <a id="contact-button" href="mailto:lokicoding98@proton.me">Contact</a>
-  <a id="github-button" href="https://github.com/LokiCodin98" target="_blank" rel="noopener noreferrer">GitHub</a>
+
   <header id="hero">
     <h1 class="titlesize">Loki Coding</h1>
     <h1 class="titlesize2">I'm Coding For Good</h1>
