--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
         <div id="firstart">
             <h1 class="articleh">New Job!</h1>
             <h3 class="articleuh">August 24th, 2025</h3>
-            <p class="articlep">"So I was able to secure a job with Intergity Staffing Soultions to work as a data entry clerk for JP Morgan Chase Bank. I will work in a secure area, and be destined to type."</p>
+            <p class="articlep">"So I was able to secure a job with Intergity Staffing Solutions to work as a data entry clerk for JP Morgan Chase Bank. I will work in a secure area, and be destined to type."</p>
             <br>
             <p class="articlep">"I have been using typeracer.com to help, and relaxing with singleplayer games recently since news and since haven't started it yet. I'm just going to practice and relax till first day."</p>
             <br>
