--- a/blog.html
+++ b/blog.html
@@ -24,6 +24,7 @@
             <p class="articlep">"Overall, just happy, and the pay is same as UPS, but I get a full time schedule and get to type away."</p>
             <br>
             <p class="articlep">"Thank for reading my first post!" || Loki ||</p>
+            <img src="images/typingskelly.png" width="200px" class="skelly"/>
             <br>
         </div>
     </div>
