--- a/blog.html
+++ b/blog.html
@@ -27,6 +27,19 @@
             <img src="images/typingskelly.png" width="200px" class="skelly"/>
             <br>
         </div>
+        <div id="secondart">
+            <h1 class="articleh">Chess And Life</h1>
+            <h3 class="articleuh">August 25th, 2025</h3>
+            <br>
+            <p class="articlep">"We created a club on Lichess.com, and made it for the Louisville area, and hope to achieve great things with this club. It mainly will be online for now, and then it will introduce real events. I hope to meet great people, and help start the chess craze here again. If around the state, or area, send a request!</p>
+            <br>
+            <a class="articlep">vv Link Here vv <a href="https://lichess.org/team/louisville-kentucky-chess-club" target="_blank">Lichess.com</a>
+            <br>
+            <br>
+            <p class="articlep">"I also, got my fingers scanned for the new job, and the office was nice, and felt good to finally work for a good place, and know that this will be fun. They were impressed with my determination, and I'm going to continue showing it and get a full time position with their company."</p>
+            <p class="articlep">"Thank for reading my second post!" || Loki ||</p>
+            <img src="images/chess.png" width="200px" height="200px" class="skelly"/>
+            <br>
     </div>
 </body>
 </html>
