--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </nav>
    <section id="about">
   <h2>About Me</h2>
-  <img src="images/1000000023.jpg" alt="Loki/Hunter" />
+  <img src="images/me.jpg" alt="Loki/Hunter" />
   <h3>Loki/Hunter</h3>
   <h4>Web Developer</h4>
   <p>Hi, I'm Loki/Hunter. I'm currently a student at Sullivan University pursuing a Web Development certificate. I build clean, static websites using HTML, CSS, and JavaScript. If you’re looking for someone who codes with purpose and integrity — I’m your guy.</p>
