--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 <body>
+    <a href="blog.html" id="issue1" target="_blank">Issue #1</a>
     <div id="background">
         <div id="header">
             <h1 class="newsh">Weekly News</h1>
