New post, space fix
Added new post for the day after therapy, and now fixed my odd spacing from rushing the first day on the idea.

--- a/blog.html
+++ b/blog.html
@@ -42,5 +42,19 @@
             <img src="images/chess.png" width="200px" height="200px" class="skelly"/>
             <br>
     </div>
+    <div id="thirdart">
+        <h1 class="articleh">Mental Health And Goals</h1>
+            <h3 class="articleuh">August 26th, 2025</h3>
+            <br>
+            <p class="articlep">"Today was therapy day, and it went well, I was able to talk about how my goals are being accomplished, but not much is being celebrated. With such a turn of events in my life with the fact of going up in projections and then a dip, then going to a higher level then even the start and inital climb has been something to me. I don't feel that I give myself what I deserve. And this isn't just a game, or car, or food. This is that mental juice that keeps the soul alive you know? I feel that this has helped a lot this session, and due to condition I am going to apply for a medical card for cannabis."</p>
+            <br>
+            <br>
+            <p class="articlep">"Other news, I was able to get Assassin’s Creed Origins for 7 $ on a Steam Sale, not some shady key store. I have enjoyed it, and really enjoy the progression factor they created. Had some few bugs that just make me laugh, and I get to remember, not recording, no live stream, just pure life you know."</p>
+            <br>
+            <p class="articlep">Lastly, I have a chess match on Thursday with a friend, he's coming over to my area and we are going to play on my board and my timer and enjoy the night with some hemp. This has created a good bond between us due to him being from Columbia this has caused speech to be not our core technique. But with this we will talk, philosophy, society, and much more. I hope to teach him, and his name is Samuel. Hey, why not also invite him to the chess club! Another Kentuckian!</p>
+            <p class="articlep">"Thank for reading my third post!" || Loki ||</p>
+            <img src="images/sim1nation.png" width="400px" height="200px" class="skelly"/>
+            <br>
+    </div>
 </body>
 </html>
