--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
             <br>
             <p class="articlep">"Overall, just happy, and the pay is same as UPS, but I get a full time schedule and get to type away."</p>
             <br>
-            <p class="articlep">"Thank for reading my first post!" || Loki ||</p>
+            <p class="articlep">"Thank you for reading my first post!" || Loki ||</p>
             <img src="images/typingskelly.png" width="200px" class="skelly"/>
             <br>
         </div>
@@ -38,7 +38,7 @@
             <br>
             <br>
             <p class="articlep">"I also, got my fingers scanned for the new job, and the office was nice, and felt good to finally work for a good place, and know that this will be fun. They were impressed with my determination, and I'm going to continue showing it and get a full time position with their company."</p>
-            <p class="articlep">"Thank for reading my second post!" || Loki ||</p>
+            <p class="articlep">"Thank you for reading my second post!" || Loki ||</p>
             <img src="images/chess.png" width="200px" height="200px" class="skelly"/>
             <br>
     </div>
@@ -52,7 +52,7 @@
             <p class="articlep">"Other news, I was able to get Assassin’s Creed Origins for 7 $ on a Steam Sale, not some shady key store. I have enjoyed it, and really enjoy the progression factor they created. Had some few bugs that just make me laugh, and I get to remember, not recording, no live stream, just pure life you know."</p>
             <br>
             <p class="articlep">Lastly, I have a chess match on Thursday with a friend, he's coming over to my area and we are going to play on my board and my timer and enjoy the night with some hemp. This has created a good bond between us due to him being from Columbia this has caused speech to be not our core technique. But with this we will talk, philosophy, society, and much more. I hope to teach him, and his name is Samuel. Hey, why not also invite him to the chess club! Another Kentuckian!</p>
-            <p class="articlep">"Thank for reading my third post!" || Loki ||</p>
+            <p class="articlep">"Thank you for reading my third post!" || Loki ||</p>
             <img src="images/sim1nation.png" width="400px" height="200px" class="skelly"/>
             <br>
     </div>
