--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header id="site-clock" data-timezone="" aria-live="polite">
+  <span class="clock-date" aria-hidden="true">—</span>
+  <span class="clock-sep" aria-hidden="true"> • </span>
+  <span class="clock-time">—</span>
+</header>
     <a href="blog.html" id="issue1" target="_blank">Issue #1</a>
     <div id="background">
         <div id="header">
@@ -56,5 +61,6 @@
             <img src="images/sim1nation.png" width="400px" height="200px" class="skelly"/>
             <br>
     </div>
+    <script src="scripts.js"></script>
 </body>
 </html>
