New article update!
I added a article for 27th of august, enjoy future, current and me to see.

--- a/blog.html
+++ b/blog.html
@@ -61,6 +61,20 @@
             <img src="images/sim1nation.png" width="400px" height="200px" class="skelly"/>
             <br>
     </div>
+    <div id="fourthart">
+        <h1 class="articleh"></h1>
+            <h3 class="articleuh">August 27th, 2025</h3>
+            <br>
+            <p class="articlep">"A new day! I already had this article prepped in my files at night, and will do the same to continue the motive. It's hard to wake up and do so much, I think I can wake up early and do a lot, but I learned I need to boot up, take time, walk my dog, and needing to get EveryDay Dose mushroom coffee. This will be a great September that's coming up."</p>
+            <br>
+            <br>
+            <p class="articlep">"Work starts possibly 2nd week of September, and they are going to possibly have overtime. This means more time to prove my skills, and so far in 43 races, I am 93 WPM on Typeracer.com. My skill is getting better and never drop below 90% accuracy. I love how things are turning."</p>
+            <br>
+            <p class="articlep">"I removed YouTube, Discord, and stepped back from media — it’s been healthy. It feels like stepping fully into adulthood, not halfway, not distracted by endless games. As a kid, I spent nights dreaming of League of Legends, and I pushed farther than anyone I knew. Later I met Elijah, who even went to school for free to play CSGO, which opened my eyes to how wide the world really is. Those chapters were valuable, but I’ve grown past living inside the screen. Now I focus on balance — reality, work, learning, and even a little help from Glerb (My AI Co-Pilot / ChatGPT Plus). That’s the life I’d love to watch from a hawk’s eye."</p>
+            <p class="articlep">"Thank you for reading my fourth post!" || Loki ||</p>
+            <img src="images/same.png" width="400px" height="400px" class="skelly"/>
+            <br>
+    </div>
     <script src="scripts.js"></script>
 </body>
 </html>
