--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       <a id="contact-button" href="mailto:lokicoding98@proton.me">Contact</a>
       <a id="github-button" href="https://github.com/LokiCodin98" target="_blank" rel="noopener noreferrer">GitHub</a>
       <a id="blog-button" href="blog.html" target="blank">Blog</a>
-  </nav>
    <section id="about">
   <h2>About Me</h2>
   <img src="images/me.jpg" alt="Loki/Hunter" />
@@ -27,7 +26,7 @@
   <header id="hero">
     <h1 class="titlesize">Loki Coding</h1>
     <h1 class="titlesize2">I'm Coding For Good</h1>
-    <p>Simple builds. Smart design. Honest code.</p>
+    <p class="center">Simple builds. Smart design. Honest code.</p>
   </header>
   <section id="gallery">
     <h2>My Top Work So Far</h2>
