--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <header id="hero">
     <h1 class="titlesize">Loki Coding</h1>
     <h1 class="titlesize2">I'm Coding For Good</h1>
-    <p class="center">Simple builds. Smart design. Honest code.</p>
+    <p>Simple builds. Smart design. Honest code.</p>
   </header>
   <section id="gallery">
     <h2>My Top Work So Far</h2>
