--- a/blog.html
+++ b/blog.html
@@ -75,6 +75,22 @@
             <img src="images/same.png" width="400px" height="400px" class="skelly"/>
             <br>
     </div>
+    <div id="fithart">
+        <h1 class="articleh"></h1>
+            <h3 class="articleuh">August 28th, 2025</h3>
+            <br>
+            <p class="articlep">"What a day, had to wait for apartment to send plumber a few days ago, and then we got him today, and just it's a story for real life. But lots of drama for work setting. We fixed it we think, but found a major componenet. Got a coffee at the front office for free and will go back for more in the morning. "</p>
+            <br>
+            <br>
+            <p class="articlep">"I hanged out with Samuel, and was just not a match as friendships and life goals. So had to back out and step away and re collect and continue. It was a good day, nothing bad, just we don't actually make a good combo to move forward in life, and so was others in my life."</p>
+            <br>
+            <p class="articlep">"I finished some school, did well, and did a test in intro to programming and got a 80/100 on it with just few not checking, but some how 2, but that's good I love seeing a good rough score shows I'm not perfect since I don't perfectly know it. I understand, can do, but still can't do the third, explain as well."</p>
+            <br>
+            <br>
+            <p class="articlep">"Thank you for reading my fifth post!" || Loki ||</p>
+            <img src="images/whatis.png" width="400px" height="600px" class="skelly"/>
+            <br>
+    </div>
     <script src="scripts.js"></script>
 </body>
 </html>
