--- a/blog.html
+++ b/blog.html
@@ -91,6 +91,23 @@
             <img src="images/whatis.png" width="400px" height="600px" class="skelly"/>
             <br>
     </div>
+    <div id="sitxhart">
+        <h1 class="articleh"></h1>
+            <h3 class="articleuh">August 29th, 2025</h3>
+            <br>
+            <p class="articlep">"Had a leak again, but we found the problem, and we are lucky that it was our supply line pipe, if it was a main stream we would be flooding constantly. Or even worse is the whole building not having running water. So we got it layered and secured with glue and foil and the crack. The best part is when I talked to the plumber when checking it out, I pointed it out and he said "It's the way they made it when casting it..." something like that, and just that was where the leak came from. It was only happening when we did a load, so it's so good other apartments are safe, less work for the complex, and just happy people. My upstairs still loads more than they should, and they're older than me. So what a world."</p>
+            <br>
+            <br>
+            <p class="articlep">
+"I also had a good moment in life when I found more peace. I am more calm, I had to clean the floods that were minor on some, and major on others. So dealing with them and never overreacting was key there. And it was my guide. I did have to take a big rest at night and just do nothing for a good time. Just darkness, no technology in my room, and just breathing, river thoughts and not an ocean or a crashing wave. It worked, and woke up great on the 30th."</p>
+            <br>
+            <br>
+            <p class="articlep">"I'm also not going to do the same posts, so I can analyze what is important and what isn't. Some stuff may be a lot of work, and that day I would want to talk, but after thoughts and then letting go, I get to come back and go wow, this wasn't that big of a deal, like with plumbing, I had a minor flood, and yes had to clean much of the time, but my floors are clean it was soapy water and not dirty. I learned that I can clean any flood now in my apartment now and in the future with a carpet cleaner if I have hardwood floors. The reality is getting better, but it already was good, just my reality is getting better. And I hope yours is too."</p>
+            <br>
+            <p class="articlep">"Thank you for reading my sixth post!" || Loki ||</p>
+            <img src="images/sixim.png" width="400px" height="600px" class="skelly"/>
+            <br>
+    </div>
     <script src="scripts.js"></script>
 </body>
 </html>
