First Week, Last Updatefor It!
This is last week blog post, for the first week! We did it a full week of stuff! Now to make another host for issues which have laid out but to advance more and to store, and create more. Maybe a new color background.

--- a/blog.html
+++ b/blog.html
@@ -108,6 +108,22 @@
             <img src="images/sixim.png" width="400px" height="600px" class="skelly"/>
             <br>
     </div>
+    <div id="sevenethart">
+        <h1 class="articleh"></h1>
+            <h3 class="articleuh">August 30th, 2025</h3>
+            <br>
+            <p class="articlep">"Saturday was a good day, it was a time to relax and wake up with a calm mind. I have been thinking of more of my thoughts that must be constant at this point, so with this in mind I know I must return to a state of a river, and not a ocean or a waterfall. Moments will lead to a waterfall down the stream, but that's nature to create some more beauty."</p>
+            <br>
+            <br>
+            <p class="articlep">"My dog had some sickies moments that night and was a scene for a doggy owner for the first time being now co named with her. Sophia. She was not looking too good and just had to use Glerb (My AI Co-Pilot) on how to diagnose, and she was in the clear, but due to my mental illnesses, I overthink and worry even if danger is no longer there. So from here was a moment of a dog owner to be serious, not brush it off too. Many ways to look at it, but I learned to move my room to the den in the living room section. Gives me a studio feel, and my foam mattress topper is on the floor almost from Asia Pacific style."</p>
+            <br>
+            <br>
+            <p class="articlep">"Going to get a house in a year with my loan, and build more credit with my job. This temp job at Chase Bank is going to be amazing. I am going to show them who they really got! A developer, not a worker. 1 year, and maybe rent if needed, but we are not going to be in an apartment. When I was 18 I moved right out with roommates, they were somewhat good and somewhat bad, and even then I had a bad month one time. So it was like eh, I have gone up and down and even then I was the bill guy for my apartment. Due to my grandmother as a roommate due to her health I let her be a bill collector etc. So it's been a great time recently and I can't wait to really get what I need and what I want that is helpful for mental, and physical health."</p>
+            <br>
+            <img src="images/seven.png" width="400px" height="600px" class="skelly"/>
+            <br>
+    </div>
+
     <script src="scripts.js"></script>
 </body>
 </html>
