--- a/blog.html
+++ b/blog.html
@@ -36,8 +36,40 @@
             <br>
             <p class="articlep"><i>And for you readers, I missed a day, let's stop doing that chain, something will fit, let's do daily! Expect it before 11:59AM Daily!</i></p>
         </div>
-       
-
+        <div id="secondart">
+            <h3 class="articleh">September 2nd, 2025</h3>
+            <br>
+            <br>
+            <p class="articlep">"The day went well again, and much progression on med mangament, and then the job is ready for orentation. I have it at 2pm tommorow, and just can't wait. We finally got to label it Bipolar and PTSD and just has been a different time knowing how to calm, and control."</p>
+            <br>
+            <p class="articlep">"I had a nap mid day, and even got to see our workers from apartment come by to fix pipe system. We have just been relaxing, and done our rituals. Now it's time to not do something, it's to continue relaxing. I sense I fail on that, one day and then I'm back to work, never a week."</p>
+            <br>
+            <br>
+            <p class="articlep">"I'm going to be more mindful of everyone I meet in the future, I will deal with my company if managment is not great, but will step up, and if have to, revolt with the people! And give the power BACK to the people, and that all for work is just less toxic enviorment. I hope to do great soon and never stop typing in my life!"</p>
+            <br>
+            <p class="articlep">- LokiWasHere</p>
+            <br>
+        </div>
+        <div id="thirdart">
+            <h3 class="articleh">September 3rd, 2025</h3>
+            <br>
+            <p class="articlep">=== Break Day / Even Machines Need Rest ===</p>
+        </div>
+        <div id="fourthart">
+            <h3 class="articleh">September 4th, 2025</h3>
+            <br>
+            <p class="articlep">"We were able to get our job set, and we even got news that we would be doing more than expected. I won't disclose the area, and job idea, but I will say that envelopes will be made from me from sort, and then sometimes for data entry. I bet if I prove myself in the data entry that I would be top spot being called in for it as a permenant. I knew that checking the box's for both when they lady said what they mean't fully, was a bad idea. But it means learn more, and get to get more knowledge on other jobs."</p>
+            <br>
+            <br>
+            <p class="articlep">"I also just am able to tackle my anxiety so much more. I had to take some meds for it due to not being able to fully control, YET! I will have the right ones soon, and just a nice process with a at home swab via mouth, and from there we see what meds are good and bad for me. It's smart, and I feel that's safe. I am not Bipolar as 4 years have been with much trouble, and learend it's Psych Abuse, and PTSD. We just move forward and now at least know our "enemy", but we know where to calm it now, and not guess."</p>
+            <br>
+            <br>
+            <p class="articlep">"I'm going to end the day off with getting email's sent via school for chess club. And then continue to play AC Origins from Steam, and just enjoy the time. Be sneaky, do good deed's...I think? But overall good time, and not to freak out about the future. What future? I thought I was typing only right now!</p>
+            <br>
+            <br>
+            <p class="articlep">- LokiWasHere</p>
+            <br>
+        </div>      
     <script src="scripts.js"></script>
 </body>
 </html>
