--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <h3>Loki/Hunter</h3>
   <h4>Web Developer</h4>
   <p>Hi, I'm Loki/Hunter. I'm currently a student at Sullivan University pursuing a Web Development certificate. I build clean, static websites using HTML, CSS, and JavaScript. If you’re looking for someone who codes with purpose and integrity — I’m your guy.</p>
-  <h4>Background & Life</h4>
+  <h4>Background & Life</h4> 
   <p>I grew up as a military brat, moving around a lot, which taught me how to adapt quickly and embrace change. Now, I’m focused on becoming a web developer, with hopes of working in government someday. I believe in working efficiently on what I love and learning to navigate challenges as they come.</p>
   <p>Growing up, I was a big gamer — mostly League of Legends, and before that, Halo and Call of Duty on Xbox. I also played EverQuest back in the early 2000s and was fascinated by it. Nowadays, I enjoy playing chess and welcome anyone who wants a friendly match. I play fairly fast but always think a few steps ahead.</p>
   <p>I attended high school in Washington State but now live on the East Coast in Louisville, KY. Life here is quieter, so I spend most of my time coding and gaming a bit before calling it a day. Friends call me casual, but I stay dedicated to learning and growing.</p>  
@@ -36,7 +36,7 @@
       </div>
       <div class="image-box">
         <img src="images/fiver 2.png" alt="Active Website" />
-        <a href="https://github.com/LokiCodin98/Hellion096" target="blank">Project 2</a>
+        <a href="https://github.com/LokiCodin98/Hellion096" target="blank">Active Website</a>
       </div>
       <div class="image-box">
         <img src="images/mobilefabric.png" alt="Project 2" />
