Non Active Anymore
It was a good journey, but had to start fresh and will create one in the future for him when I get more improved from school at Sullivan Unviersity.

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <a href="https://github.com/LokiCodin98/LokisSurveyFormFCC" target="blank">Project 1</a>
       </div>
       <div class="image-box">
-        <img src="images/fiver 2.png" alt="Active Website" />
-        <a href="https://github.com/LokiCodin98/Hellion096" target="blank">Active Website</a>
+        <img src="images/fiver 2.png" alt="Project 2" />
+        <a href="https://github.com/LokiCodin98/Hellion096" target="blank">Project 2</a>
       </div>
       <div class="image-box">
         <img src="images/mobilefabric.png" alt="Project 2" />
